# ocaml-stdint

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  META  Makefile  OCamlMakefile  README.md  _oasis  _tags  dune-project  fmt.ml  myocamlbuild.ml  opam  setup.ml  stdint.opam  str_conv.ml  uint128.ml  uint128.mli  uint32.ml  uint32.mli  uint32_stubs.c  uint64.ml  uint64.mli  uint64_stubs.c
debian/: changelog  clean  control  copyright  libuint-ocaml-dev.install.in  libuint-ocaml.dirs.in  libuint-ocaml.install.in  rules  watch
lib/: META  bytes_conv.ml  bytes_conv.mli  dune  float_conv.c  infix.ml  infix.mli  int128.h  int128_conv.c  int128_stubs.c  int16.h  int16.ml  int16.mli  int16_conv.c  int16_stubs.c  int24.h  int24_conv.c  int24_stubs.c  int32_conv.c  int40.h  int40_conv.c  int40_stubs.c  int48.h  int48_conv.c  int48_stubs.c  int56.h  int56_conv.c  int56_stubs.c  int64_conv.c  int8.h  int8.ml  int8.mli  int8_conv.c  int8_stubs.c  int_conv.c  int_wrapper.ml  int_wrapper.mli  jbuild  libstdint_stubs.clib  libuint32.clib  (+54 more)
spec/: common.ml  int128.ml  int32.ml  uint128.ml  uint32.ml  uint64.ml
test/: gh28.ml  jbuild
tests/: .gitignore  dune  stdint_test.ml
