(library
 (name stdint)
 (public_name stdint)
 (synopsis "Standard integer types for OCaml")
 (flags (:standard -w -50-32))
 (install_c_headers
  int8 int16 int24 int40 int48 int56 int128
  uint8 uint16 uint24 uint32 uint40 uint48 uint56 uint64 uint128)
 (foreign_stubs (language c)
  (names
   float_conv
   int128_conv
   int128_stubs
   int16_conv
   int24_conv
   int32_conv
   int40_conv
   int40_stubs
   int48_conv
   int48_stubs
   int56_conv
   int56_stubs
   int64_conv
   int8_conv
   int_conv
   nativeint_conv
   uint128_conv
   uint128_stubs
   uint16_conv
   uint24_conv
   uint32_conv
   uint32_stubs
   uint40_conv
   uint40_stubs
   uint48_conv
   uint48_stubs
   uint56_conv
   uint56_stubs
   uint64_conv
   uint64_stubs
   uint8_conv))
 (libraries bytes))
